# Kernel-Image-Processing

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_advanced_tests.bat  run_advanced_tests.sh
Report/Manneschi_finalterm_latex_project/: Manneschi_finalterm_assignment.tex
results/advanced_tests/: advanced_results.csv
results/benchmarks/: benchmark_results.csv
results/plots/: summary.txt
scripts/: benchmark.sh  download_images.sh  generate_plots.py  setup_images.py
src/: advanced_tests.cpp  advanced_tests.h  benchmark.cpp  benchmark.h  cpu_convolution.cpp  cpu_convolution.h  gpu_convolution.cu  gpu_convolution.cuh  image_io.cpp  image_io.h  kernels.cpp  kernels.h  main.cpp  utils.cpp  utils.h
tests/: test_correctness.cpp
